/*
 * $Id: ChangeLog,v 1.1273 2003/07/21 22:41:04 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-21 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvm.h
  * source/vm/hvm.c
    + Added void hb_vmRequestReset( void )

2003-07-21 15:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    * Reverted recenge change which disabled SubStr( <s>, <n>, 1) optimization.

    /* Andi, the change you made was not as per the ChangeLog Entry, can you please expalin
       what problem you tried to solve - do you have a small sample?  */

  * source/compiler/genc.c
    * Reverted recent change which was NOT documented in ChangeLog.

    /*
      Andi could you please explain waht was the purpose of that change?

      Sadly I just wasted more than 12 hours, trying to understand why xHB.exe was no longer working.
      until I finally discovered that HB_BACK_END support was removed from genc.c, and there was no
      ChangeLog Entry to document that change.
    */

2003-07-20 21:57 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/hvm.c
  * source/vm/thread.c
    ! Detangled also the FM sequence that tells that some memory is not
      unused; under MT, conOut used the thread's stack. Now the main
      thread stack is kept valid up to the end of the program, even if
      the items are deleted before fm checks for them bein still alive.

2003-07-20 19:50 UTC+0200 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/fm.c
  * source/vm/hvm.c
  * source/vm/memvars.c
  * source/vm/thread.c
    ! AT LAST I have fixed xgrab/xfree/stack sequence at initialization
      and closing of the VM. This allows threads to use hb_xgrab family
      function instad of malloc/free to setup their private stacks.