@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1273 2003/07/21 22:41:04 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1274 2003/07/22 01:54:27 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-07-22 06:30 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
+  * contrib/rdd_ads/ads1.c
+  * contrib/rdd_ads/adsfunc.c
+    ! Changes in adsGetValue, adsPutValue and AdsKeyCount() for speed().
+      Tested with ADS Local 6.2, not tested with prior versions of ADS.
 
 2003-07-21 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbvm.h
